# SciLatex

./: .gitignore  CMakeLists (claudia's conflicted copy 2024-12-18).txt  CMakeLists.txt  CMakeLists.txt.user.90374d5  CMakeLists.txt.user.bb5f8e0  README.md  bracketchooserdialog.cpp  bracketchooserdialog.h  decoratordialog.cpp  decoratordialog.h  fontdialog.cpp  fontdialog.h  keyutils.h  labeldialog.cpp  labeldialog.h  latexeditor.cpp  mainwindow.cpp  mainwindow.h  mathnamedialog.cpp  mathnamedialog.h  matlabutils.cpp  matlabutils.h  matrixmode.cpp  matrixmode.h  navigation.cpp  navigation.h  operatordialog.cpp  operatordialog.h  preferencesdialog.cpp  preferencesdialog.h  preferencesmanager.cpp  preferencesmanager.h  previewwindow.cpp  previewwindow.h  recentfilesdialog.cpp  spacingdialog.cpp  spacingdialog.h  todo.txt
portable_windows_x64/: .ninja_deps  .ninja_log  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  qtcsettings.cmake
portable_windows_x64/.cmake/api/v1/reply/: cache-v2-22cde157f6973495a819.json  cmakeFiles-v1-a3d23af19c54d0fe27bd.json  codemodel-v2-8efb397d2a52e104764a.json  directory-.-Release-38ab6b87736871f70f8f.json  directory-third_party.curl-Release-95c3f67fd9f232cf4b2c.json  directory-third_party.curl.docs.examples-Release-841ee89dff4433e0dfd2.json  directory-third_party.curl.lib-Release-1f7a64312381ea7ceec3.json  directory-third_party.curl.scripts-Release-83dd48114b33b5c4aaa1.json  index-2025-07-16T19-27-53-0825.json  target-SciLatex-Release-df4a3e96cf311c9a3a82.json  target-SciLatex_autogen-Release-b4ff976536a79ceed70f.json  target-SciLatex_autogen_timestamp_deps-Release-90cadb19e48157a39641.json  target-SciLatex_qmlimportscan-Release-70dc23fa203a1afcd524.json  target-curl-example-10-at-a-time-Release-a5d93b85b9361f4aefd8.json  target-curl-example-10-at-a-time_autogen-Release-b02480e80f8fe4017410.json  target-curl-example-10-at-a-time_autogen_timestamp_deps-Release-625959dd8f8be5630e0a.json  target-curl-example-address-scope-Release-358468d35ade720c89f2.json  target-curl-example-address-scope_autogen-Release-6bffac3feddce049f3bf.json  target-curl-example-address-scope_autogen_timestamp_deps-Release-c12dabd5b76372aebf60.json  target-curl-example-altsvc-Release-6e9424f2ef3e48c0faed.json  target-curl-example-altsvc_autogen-Release-f7d1082cc8ea301f1d29.json  target-curl-example-altsvc_autogen_timestamp_deps-Release-491986313445a85eecda.json  target-curl-example-anyauthput-Release-5d613ebcefecc07ac771.json  target-curl-example-anyauthput_autogen-Release-5b32e9c19d1f58e5698d.json  target-curl-example-anyauthput_autogen_timestamp_deps-Release-426dcf93607614128d95.json  target-curl-example-block_ip-Release-cc06d76aabb788d249da.json  target-curl-example-block_ip_autogen-Release-ad21ddc72d474b0a3bc1.json  target-curl-example-block_ip_autogen_timestamp_deps-Release-d76975c423801efcaa33.json  target-curl-example-certinfo-Release-ea5622a386159f3dc163.json  target-curl-example-certinfo_autogen-Release-7c22132e1648d930cd94.json  target-curl-example-certinfo_autogen_timestamp_deps-Release-f29307e4cf868585816b.json  target-curl-example-chkspeed-Release-70ad0cfe1c05a8817264.json  target-curl-example-chkspeed_autogen-Release-a52d78e71bdac031887f.json  target-curl-example-chkspeed_autogen_timestamp_deps-Release-5604cfe4b44357f19c37.json  target-curl-example-connect-to-Release-ff42a1988c4b497dd33f.json  target-curl-example-connect-to_autogen-Release-76c2fd383b64f6476256.json  target-curl-example-connect-to_autogen_timestamp_deps-Release-375a41053d1679b227ea.json  target-curl-example-cookie_interface-Release-4c69ee6d710267dae6c0.json  target-curl-example-cookie_interface_autogen-Release-d3eb45de52a6c970ce46.json  target-curl-example-cookie_interface_autogen_timestamp_deps-Release-53bd887747ef89a1b24f.json  (+317 more)
portable_windows_x64/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
portable_windows_x64/.qt/deploy_qml_imports/: SciLatex.cmake
portable_windows_x64/.qt/qml_imports/: SciLatex_build.rsp  SciLatex_conf.rsp
portable_windows_x64/.qtc_clangd/: compile_commands.json
portable_windows_x64/SciLatex_autogen/: deps  mocs_compilation.cpp
portable_windows_x64/SciLatex_autogen/EWIEGA46WW/: moc_bracketchooserdialog.cpp.d  moc_decoratordialog.cpp.d  moc_fontdialog.cpp.d  moc_labeldialog.cpp.d  moc_mainwindow.cpp.d  moc_mathnamedialog.cpp.d  moc_operatordialog.cpp.d  moc_preferencesdialog.cpp.d  moc_previewwindow.cpp.d  moc_recentfilesdialog.cpp.d  moc_spacingdialog.cpp.d
sources/: CMakeLists.txt  bracketchooserdialog.cpp  bracketchooserdialog.h  decoratordialog.cpp  decoratordialog.h  fontdialog.cpp  fontdialog.h  keyutils.h  labeldialog.cpp  labeldialog.h  latexeditor.cpp  mainwindow.cpp  mainwindow.h  mathnamedialog.cpp  mathnamedialog.h  matlabutils.cpp  matlabutils.h  matrixmode.cpp  matrixmode.h  navigation.cpp  navigation.h  operatordialog.cpp  operatordialog.h  preferencesdialog.cpp  preferencesdialog.h  preferencesmanager.cpp  preferencesmanager.h  previewwindow.cpp  previewwindow.h  recentfilesdialog.cpp  recentfilesdialog.h  spacingdialog.cpp  spacingdialog.h
(+1163 files in other folders)
